--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The 3rd edition of my discord bot!",
   "main": "src/index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
